--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="zh-TW">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Cpath d='M32 4L4 28h6v32h44V28h6L32 4z' fill='%230056b3'/%3E%3Crect x='20' y='32' width='24' height='28' rx='2' fill='%23fff'/%3E%3Cpath d='M32 52l-6-6 2.8-2.8L32 46.4l9.2-9.2 2.8 2.8z' fill='%230056b3'/%3E%3C/svg%3E" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>房屋租賃存證信函助手</title>
+    <title>法律文件生成助手</title>
   </head>
   <body>
     <div id="app"></div>
